crates/rdra-ish-syntax/src/snapshots/rdra_ish_syntax__parser__tests__parse_entity.snap
---
source: crates/rdra-ish-syntax/src/parser.rs
assertion_line: 1294
expression: ast
---
Ast {
    items: [
        Instance(
            InstanceDecl {
                kind: Entity,
                id: "Product",
                label: "商品",
                description: None,
                requirement: RequirementMetadata {
                    priority: None,
                    sources: [],
                    stakeholders: [],
                    owner: None,
                    acceptance_criteria: [],
                    status: None,
                    risk: None,
                    rationale: None,
                },
                adr: AdrMetadata {
                    status: None,
                    context: [],
                    decision: None,
                    consequences: [],
                    accepted_options: [],
                    rejected_options: [],
                    reasons: [],
                },
                api: ApiMetadata {
                    method: None,
                    path: None,
                    idempotency: None,
                    mode: None,
                    auth_scheme: None,
                },
                nfr: NfrMetadata {
                    metric: None,
                    target: None,
                    window: None,
                    slo: None,
                    availability: None,
                    resilience: None,
                    audit: None,
                    logging: None,
                    retention: None,
                    privacy: None,
                },
                field: FieldMetadata {
                    access: None,
                    required: None,
                    source: None,
                },
                usecase: UseCaseMetadata {
                    preconditions: [],
                    postconditions: [],
                    guards: [],
                    alternatives: [],
                    errors: [],
                },
                columns: [
                    Column {
                        name: "id",
                        col_type: Int,
                        annotations: [
                            Pk,
                        ],
                        span: 29..44,
                    },
                    Column {
                        name: "sku",
                        col_type: String,
                        annotations: [
                            Unique,
                            Index,
                        ],
                        span: 47..73,
                    },
                    Column {
                        name: "name",
                        col_type: String,
                        annotations: [
                            Label(
                                "商品名",
                            ),
                        ],
                        span: 76..108,
                    },
                    Column {
                        name: "price",
                        col_type: Decimal,
                        annotations: [
                            Check(
                                "price >= 0",
                            ),
                        ],
                        span: 111..146,
                    },
                    Column {
                        name: "store_id",
                        col_type: Int,
                        annotations: [
                            IndexComposite(
                                [
                                    "status",
                                    "store_id",
                                ],
                            ),
                            UniqueComposite(
                                [
                                    "sku",
                                    "store_id",
                                ],
                            ),
                        ],
                        span: 149..210,
                    },
                    Column {
                        name: "status",
                        col_type: Enum(
                            [
                                "active",
                                "discontinued",
                            ],
                        ),
                        annotations: [
                            Default(
                                "active",
                            ),
                        ],
                        span: 213..264,
                    },
                    Column {
                        name: "note",
                        col_type: String,
                        annotations: [
                            Null,
                        ],
                        span: 267..285,
                    },
                    Column {
                        name: "tenant_id",
                        col_type: Int,
                        annotations: [
                            Tenant,
                        ],
                        span: 288..310,
                    },
                    Column {
                        name: "deleted_at",
                        col_type: DateTime,
                        annotations: [
                            Null,
                            SoftDelete,
                        ],
                        span: 313..352,
                    },
                    Column {
                        name: "valid_from",
                        col_type: DateTime,
                        annotations: [
                            History,
                        ],
                        span: 355..384,
                    },
                    Column {
                        name: "display_price",
                        col_type: Money,
                        annotations: [
                            Derived(
                                "price * tax_rate",
                            ),
                        ],
                        span: 387..436,
                    },
                ],
                span: 1..438,
            },
        ),
    ],
    source: "\nentity Product \"商品\" {\n  id:  Int    @pk\n  sku: String @unique @index\n  name: String @label(\"商品名\")\n  price: Decimal @check(\"price >= 0\")\n  store_id: Int @index(status, store_id) @unique(sku, store_id)\n  status: Enum(active, discontinued) @default(active)\n  note: String @null\n  tenant_id: Int @tenant\n  deleted_at: DateTime @null @soft_delete\n  valid_from: DateTime @history\n  display_price: Money @derived(\"price * tax_rate\")\n}\n",
}
