crates/rdra-ish-syntax/src/snapshots/rdra_ish_syntax__parser__tests__parse_instance_decl.snap
---
source: crates/rdra-ish-syntax/src/parser.rs
assertion_line: 435
expression: ast
---
Ast {
    items: [
        Instance(
            InstanceDecl {
                kind: Actor,
                id: "Customer",
                label: "顧客",
                description: Some(
                    "商品を購入する顧客",
                ),
                columns: [],
                span: 0..65,
            },
        ),
    ],
    source: "actor Customer \"顧客\" description \"商品を購入する顧客\"",
}
