crates/rdra-ish-syntax/src/snapshots/rdra_ish_syntax__parser__tests__parse_predicate.snap
---
source: crates/rdra-ish-syntax/src/parser.rs
expression: ast
---
Ast {
    items: [
        Predicate(
            PredicateCall {
                name: "performs",
                args: [
                    Ref(
                        QRef {
                            kind_qualifier: None,
                            parts: [
                                "Customer",
                            ],
                            span: 9..17,
                        },
                    ),
                    Ref(
                        QRef {
                            kind_qualifier: None,
                            parts: [
                                "Browse",
                            ],
                            span: 19..25,
                        },
                    ),
                ],
                chain: [],
                span: 0..26,
            },
        ),
    ],
    source: "performs(Customer, Browse)",
}
